// for syntax highlighting we use proto3 version
syntax="proto3";
// path to our current folder, where the generated files will be placed
option go_package = "./proto";
// package name for our proto file
package greet_service;
// defining all the Services for the gRPC
service GreetService {
    // Simple RPC
    rpc SayHello (NoParameterRequest) returns (HelloResponse);
    // Server Streaming RPC
    rpc SayHelloServerStream (NamesList) returns (stream HelloResponse);
    // Client Streaming RPC
    rpc SayHelloClientStream (stream HelloRequest) returns (MessagesList);
    // Bi Directional Streaming RPC
    rpc SayHelloBiStream (stream HelloRequest) returns (stream HelloResponse);
}

// defining the request message
message NoParameterRequest {}

message HelloRequest {
    string name = 1;
}
message HelloResponse {
    string message = 1;
}
message NamesList {
    repeated string names = 1;
}
message MessagesList {
    repeated string messages = 1;
}
